Text wrapping for very long options/optgroups Fixes #20

--- a/src/bselect.less
+++ b/src/bselect.less
@@ -58,6 +58,7 @@
 
 .bselect-label {
 	padding: 4px 12px;
+	overflow: hidden;
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
 	#bselect-mixins > .border-radius(@baseBorderRadius 0 0 @baseBorderRadius);
 }
@@ -179,6 +180,7 @@
 		padding: @bselectItemPadding;
 		color: @dropdownLinkColor;
 		text-decoration: none;
+		white-space: normal;
 	}
 
 	&.grouped {
@@ -214,6 +216,7 @@
 	padding: @bselectItemPadding;
 	font-weight: bold;
 	cursor: default;
+	white-space: normal;
 }
 
 
